sandbox/output
OneHundredDoors.java:5: error: incompatible types: String cannot be converted to int
        return "O";
               ^
OneHundredDoorsTest.java:13: error: method statesOfDoorsAfterPassingPartialDoors in class OneHundredDoors cannot be applied to given types;
        assertEquals("O", oneHundredDoors.statesOfDoorsAfterPassingPartialDoors(1));
                                         ^
  required: no arguments
  found: int
  reason: actual and formal argument lists differ in length
2 errors
